--- a/Module-4-MoreHTML/index.html
+++ b/Module-4-MoreHTML/index.html
@@ -17,8 +17,16 @@
       nav > ul > li {
         display: inline;
         margin: 0 10px;
+        text-decoration: none;
+        margin-right: 10px;
+        padding: 5px;
+        list-style: none;
+      }
+      nav > ul > li:hover{
+        background-color: lightgray;
       }
       nav > ul > li > a {
+        color: black;
         text-decoration: none;
       }
       footer {
