complete first figma portfolio page

--- a/Module-6-protfolio/index.html
+++ b/Module-6-protfolio/index.html
@@ -4,47 +4,202 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio Landing Page</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
+          integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A=="
+          crossorigin="anonymous" referrerpolicy="no-referrer"/>
     <link rel="stylesheet" href="./style/style.css">
 </head>
 <body>
-    <!-- Heading Section -->
-    <header>
-        <img src="./images/developer.png" alt="">
-        <div class="alada">
-            <nav class="navnav">
-                <h3 class="nav-name">Ma<span>r</span>k</h3>
-                <ul>
-                    <li><a href="#">Portfolio</a></li>
-                    <li><a href="#">Blog</a></li>
-                    <li>
-                        <a href="#">
-                            <button>
-                                <span><img src="./images/call-white.svg" alt=""></span>
-                                <span>Hire Me</span>
-                            </button>
-                        </a>
-                    </li>
-                </ul>
-            </nav>
-            <div class="banner">
-                <div class="banner-title">
-                    <h4>Hi, I am</h4>
-                    <h1>Mark Zuckerberg</h1>
-                    <p>Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society behaved moments.</p>
-                    <button><i class="fa-solid fa-download"></i> Download CV</button>
-                    <button><i class="fa-solid fa-phone"></i> Contact</button>
-                </div>
-                <img class="banner-pic" src="./images/portfolio.png" alt="">
+<!-- Heading Section -->
+<header>
+    <img src="./images/developer.png" alt="">
+    <div class="alada">
+        <nav class="navnav">
+            <h3 class="nav-name">Ma<span>r</span>k</h3>
+            <ul>
+                <li><a href="#">Portfolio</a></li>
+                <li><a href="#">Blog</a></li>
+                <li>
+                    <a href="#">
+                        <button>
+                            <span><img src="./images/call-white.svg" alt=""></span>
+                            <span>Hire Me</span>
+                        </button>
+                    </a>
+                </li>
+            </ul>
+        </nav>
+        <div class="banner">
+            <div class="banner-title">
+                <h4>Hi, I am</h4>
+                <h1>Mark Zuckerberg</h1>
+                <p>Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society
+                    behaved moments.</p>
+                <button><i class="fa-solid fa-download"></i> Download CV</button>
+                <button><i class="fa-solid fa-phone"></i> Contact</button>
+            </div>
+            <img class="banner-pic" src="./images/portfolio.png" alt="">
+        </div>
+    </div>
+</header>
+
+<!-- Main Section -->
+<main>
+    <section class="aboutMe">
+        <h3>About Me</h3>
+        <p>I, m a designer & developer with a passion for web design. I enjoy developing simple, clean and slick
+            websites that provide real value to the end user. Thousands of clients have procured exceptional resulfs
+            while working with me. Delivering work within time and budget which meets clients requirements in our
+            mata.</p>
+        <div class="info-block">
+            <div class="info">
+                <div>Name:</div>
+                <h3>Mark Zuckerberg</h3>
+            </div>
+            <div class="info">
+                <div>Email:</div>
+                <h3>mark@gmail.com</h3>
+            </div>
+            <div class="info">
+                <div>Date of Birth:</div>
+                <h3>14 May 1984</h3>
+            </div>
+            <div class="info">
+                <div>From:</div>
+                <h3>New York, USA</h3>
+            </div>
+        </div>
+    </section>
+</main>
+
+<!--  Skill Section  -->
+<section class="dev-code">
+    <h1>What I do</h1>
+    <p>I have more than 10 years experience building software for clients all over the world. Below is a quick overview
+        of my main technical skill sets and technologies i use. Want to find out more about my experience? Check out my
+        online resume and project portfolio.</p>
+    <div class="card-code">
+        <div class="card">
+            <img src="./images/icons/js.png" alt="javascript icon">
+            <h3>Vanilla JavaScript</h3>
+            <p>List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons
+                available. Aenean commodo ligula eget dolor.</p>
+        </div>
+        <div class="card">
+            <img src="./images/icons/react.png" alt="react icon">
+            <h3>React</h3>
+            <p>List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons
+                available. Aenean commodo ligula eget dolor.</p>
+        </div>
+        <div class="card">
+            <img src="./images/icons/nodejs.png" alt="nodejs icon">
+            <h3>React</h3>
+            <p>List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons
+                available. Aenean commodo ligula eget dolor.</p>
+        </div>
+        <div class="card">
+            <img src="./images/icons/mongo.png" alt="mongodb icon">
+            <h3>React</h3>
+            <p>List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons
+                available. Aenean commodo ligula eget dolor.</p>
+        </div>
+    </div>
+</section>
+
+<section class="summary">
+    <h1>A summary of My Resume</h1>
+
+    <div class="summary-merge">
+        <div class="summary-one">
+            <div>
+                <h1>My Education</h1>
+            </div>
+            <div class="summary-des">
+                <h3>Master in Computer Engineering</h3>
+                <p>Harvard University / 2015 - 2017</p>
+                <p>
+                    List skill/technologies here. You can change the icon above
+                    to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.
+                </p>
+            </div>
+            <p class="dag"></p>
+            <div class="summary-des">
+                <h3>Master in Computer Engineering</h3>
+                <p>Harvard University / 2015 - 2017</p>
+                <p>
+                    List skill/technologies here. You can change the icon above
+                    to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.
+                </p>
+            </div>
+            <p class="dag"></p>
+            <div class="summary-des">
+                <h3>Master in Computer Engineering</h3>
+                <p>Harvard University / 2015 - 2017</p>
+                <p>
+                    List skill/technologies here. You can change the icon above
+                    to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.
+                </p>
             </div>
         </div>
 
-    </header>
+        <div class="summary-two">
+            <div>
+                <h1>My Experience</h1>
+            </div>
+            <div class="summary-des">
+                <h3>Sr. Font End Developer</h3>
+                <p>Apple Inc / 2020 - Current</p>
+                <p>
+                    List skill/technologies here. You can change the icon above
+                    to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.
+                </p>
+            </div>
+            <p class="dag"></p>
+            <div class="summary-des">
+                <h3>Jr. Font End Developer</h3>
+                <p>Dribbble Inc / 2018 - 2022</p>
+                <p>
+                    List skill/technologies here. You can change the icon above
+                    to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.
+                </p>
+            </div>
+            <p class="dag"></p>
+            <div class="summary-des">
+                <h3>HTML Developer</h3>
+                <p>Adobe Inc / 2017 - 2018</p>
+                <p>
+                    List skill/technologies here. You can change the icon above
+                    to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.
+                </p>
+            </div>
+        </div>
+    </div>
 
-    <!-- Main Section -->
-    <main></main>
+    <div><button><i class="fa-solid fa-download"></i> Download CV</button></div>
+</section>
 
-    <!-- Footer Section -->
-    <footer></footer>
+<!-- Footer Section -->
+<footer class="bottom-footer">
+    <div class="left-footer">
+        <h1>Lets Connect</h1>
+        <p>
+            Please fill out the form on this section to contact with me or call between 9:00 A.M and 8.00 P.M ET, Monday through Friday.
+        </p>
+        <div class="footer-icon">
+            <img src="./images/icons/facebook.png" alt="facebook icon">
+            <img src="./images/icons/twitter.png" alt="twitter icon">
+            <img src="./images/icons/insta.png" alt="instagram icon">
+        </div>
+    </div>
+    <div class="right-footer">
+        <h1>Let’s Message me</h1>
+        <form>
+            <input class="ioName" type="text" placeholder="Your name">
+            <input class="ioName" type="text" placeholder="Your email">
+            <input class="ioMsg" type="text" placeholder="Message">
+        </form>
+        <button>Submit</button>
+    </div>
+</footer>
 </body>
 </html>
