simple shop responsive with grid

--- a/Module-8-Responsive-Milestone2/grid.html
+++ b/Module-8-Responsive-Milestone2/grid.html
@@ -17,6 +17,24 @@
             /* grid-template-columns: repeat(3, 1fr) 2fr; */
             grid-template-columns: 100px 200px auto;
         }
+        .grid-container2{
+            display: grid;
+            grid-template-columns: repeat(3, 80px);
+            grid-template-rows: repeat(3, 30px);
+            row-gap: 20px;
+            column-gap: 20px;
+        }
+        .grid-box{
+            border: 1px solid black;
+            padding: 15px 10px;
+            display: flex;
+            flex-direction: row;
+            justify-content: center;
+            align-items: center;
+            border-radius: 10px;
+            background-color: aquamarine;
+        }
+
     </style>
 </head>
 <body>
@@ -43,6 +61,15 @@
          <div class="item">item 18</div>
          <div class="item">item 19</div>
          <div class="item">item 20</div>
+    </div>
+
+    <div class="grid-container2">
+        <div class="grid-box">1</div>
+        <div class="grid-box">2</div>
+        <div class="grid-box">3</div>
+        <div class="grid-box">4</div>
+        <div class="grid-box">5</div>
+        <div class="grid-box">6</div>
     </div>
 </body>
 </html>
