--- a/Module-8-Responsive-Milestone2/responsive.html
+++ b/Module-8-Responsive-Milestone2/responsive.html
@@ -132,6 +132,25 @@
                 color: #232f3e;
             }
         }
+        @media screen and (min-width: 250px) and (max-width: 399px){
+            .card {
+                width: 200px;
+                height: 200px;
+            }
+
+            .box {
+                grid-template-columns: repeat(1, 200px);
+            }
+
+            .box .card>img {
+                width: 40%;
+            }
+
+            .box .card>h3 {
+                font-size: 20px;
+                color: #232f3e;
+            }
+        }
     </style>
 </head>
 
