--- a/Module-25-dom/2.html
+++ b/Module-25-dom/2.html
@@ -1,22 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>change js</title>
 </head>
+
 <body>
     <header>
         <h1 id="heading1">JS 😛 Change me</h1>
+        <section>
+        section1
+        </section>
+
+        <section>
+            section2
+        </section>
+
+        <section>
+            section3
+        </section>
     </header>
-    <main>
-        <p id="cng-maro" class="test1">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae vel labore eius voluptatibus laudantium quos.
+    <main class="main-container">
+        <p id="cng-maro" class="test1 test2 test3">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae vel labore eius voluptatibus laudantium
+            quos.
         </p>
+        <p class="ewww">abc</p>
     </main>
     <footer>
         <div>istiak@gmail.com, copyright 2024</div>
     </footer>
     <script src="./2.js"></script>
 </body>
+
 </html>
