more & more dom

--- a/Module-26-dom-events/first.html
+++ b/Module-26-dom-events/first.html
@@ -13,6 +13,7 @@
         <img id="bulb" src="https://www.w3schools.com/js/pic_bulboff.gif" alt="bulb">
         <button onclick="bulb.src='https://www.w3schools.com/js/pic_bulboff.gif'">Turn off the light</button>
         <br><br>
+        <!-- Button change color -->
         <div>
             <button id="blue-me">Blue me🥶</button>
             <button id="red-me">Red me🏮</button>
@@ -23,6 +24,25 @@
             <button id="orange-me">Orange me📙</button>
             <button id="black-me">Black me🎩</button>
         </div>
+
+        <!-- Button change to your name -->
+        <div>
+            <h2 id="press-button">Press Button</h2>
+            <button onclick="changeToYou()">Click Me😛</button>
+        </div>
+
+        <!-- Button change text to image -->
+        <div>
+            <h2 class="chopper-pic" id="show-image">Click button to show image</h2>
+            <button id="button-image">Image me 🖼️</button>
+        </div>
+
+        <br><br>
+        <h2>Change value by enter name</h2>
+        <p id="input-text">Change meee😐</p>
+        <!-- Button take input & print -->
+         <input id="input-input" type="text">
+         <button id="input-Take">Submit✔</button>
     </main>
     <script src="./js_css/first.js"></script>
 </body>
