--- a/Module-33-json-api/fetch.html
+++ b/Module-33-json-api/fetch.html
@@ -22,6 +22,12 @@
         <button onclick="pokeData()">Pokemon Data</button>
     </div><hr>
     
+    <div>
+        <h2>Search Engine</h2>
+        <div id="showPoke"></div>
+        <input id="pokemonInput" type="text" placeholder="Enter pokemon name">
+        <button id="pokemon-btn">Submit</button>
+    </div>
     <script src="./fetch.js"></script>
 </body>
 </html>
