try catch & async practice

--- a/Module-33-json-api/fetch.html
+++ b/Module-33-json-api/fetch.html
@@ -37,7 +37,7 @@
     
 
     <!-- !JavaScript -->
-    <script src="./fetch.js"></script>
-    <script src="./fetch2.js"></script>
+    <script src="./js/fetch.js"></script>
+    <script src="./js/fetch2.js"></script>
 </body>
 </html>
