--- a/Module-33-json-api/post.html
+++ b/Module-33-json-api/post.html
@@ -30,6 +30,7 @@
             line-height: 1.3rem;
         }
     </style>
+    <link rel="shortcut icon" href="https://jsonplaceholder.typicode.com/favicon.ico" type="image/x-icon">
 </head>
 
 <body>
@@ -38,7 +39,7 @@
         <div id="post-container"></div>
     </section>
 
-    <script src="./post.js"></script>
+    <script src="./js/post.js"></script>
 </body>
 
 </html>
