--- a/Module-34-more-js/promise.html
+++ b/Module-34-more-js/promise.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <h1>Load my API</h1>
-    <script src="./js/await.js"></script>
+    <script src="./js/setinterval.js"></script>
+    <!-- <script src="./js/await.js"></script> -->
 </body>
 </html>
