--- a/Module-42-knowledge-cafe/index.html
+++ b/Module-42-knowledge-cafe/index.html
@@ -4,13 +4,14 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./src/index.css">
     <title>Vite + React</title>
     <link
       href="https://cdn.jsdelivr.net/npm/remixicon@4.3.0/fonts/remixicon.css"
       rel="stylesheet"
     />
   </head>
-  <body>
+  <body style="font-family: 'Exo 2', serif">
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
