spread and rest

--- a/Jonas_Schmedtmann/Essential_JavaScript_for_React/Destructuring_Objects_and_Arrays.html
+++ b/Jonas_Schmedtmann/Essential_JavaScript_for_React/Destructuring_Objects_and_Arrays.html
@@ -13,6 +13,7 @@
     </head>
     <body>
         <p class="practiceText">Go to the console for practice</p>
-        <script src="./Destructuring_Objects_and_Arrays.js"></script>
+        <!-- <script src="./1_Destructuring_Objects_and_Arrays.js"></script> -->
+        <script src="./2_Rest_Spread.js"></script>
     </body>
 </html>
