nullish coalescing operator

--- a/Jonas_Schmedtmann/Essential_JavaScript_for_React/Destructuring_Objects_and_Arrays.html
+++ b/Jonas_Schmedtmann/Essential_JavaScript_for_React/Destructuring_Objects_and_Arrays.html
@@ -14,6 +14,8 @@
     <body>
         <p class="practiceText">Go to the console for practice</p>
         <!-- <script src="./1_Destructuring_Objects_and_Arrays.js"></script> -->
-        <script src="./2_Rest_Spread.js"></script>
+        <!-- <script src="./2_Rest_Spread.js"></script> -->
+        <!-- <script src="./3_Template_Literals.js"></script> -->
+        <script src="./7_short_circuiting.js"></script>
     </body>
 </html>
