optional chaning when data is not sure

--- a/Jonas_Schmedtmann/Essential_JavaScript_for_React/Destructuring_Objects_and_Arrays.html
+++ b/Jonas_Schmedtmann/Essential_JavaScript_for_React/Destructuring_Objects_and_Arrays.html
@@ -16,6 +16,7 @@
         <!-- <script src="./1_Destructuring_Objects_and_Arrays.js"></script> -->
         <!-- <script src="./2_Rest_Spread.js"></script> -->
         <!-- <script src="./3_Template_Literals.js"></script> -->
-        <script src="./7_short_circuiting.js"></script>
+        <!-- <script src="./7_short_circuiting.js"></script> -->
+        <script src="./8_optional_chaining.js"></script>
     </body>
 </html>
