map method rewind

--- a/Jonas_Schmedtmann/Essential_JavaScript_for_React/Destructuring_Objects_and_Arrays.html
+++ b/Jonas_Schmedtmann/Essential_JavaScript_for_React/Destructuring_Objects_and_Arrays.html
@@ -17,6 +17,7 @@
         <!-- <script src="./2_Rest_Spread.js"></script> -->
         <!-- <script src="./3_Template_Literals.js"></script> -->
         <!-- <script src="./7_short_circuiting.js"></script> -->
-        <script src="./8_optional_chaining.js"></script>
+        <!-- <script src="./8_optional_chaining.js"></script> -->
+        <script src="./9_map.js"></script>
     </body>
 </html>
