--- a/Jonas_Schmedtmann/Essential_JavaScript_for_React/Destructuring_Objects_and_Arrays.html
+++ b/Jonas_Schmedtmann/Essential_JavaScript_for_React/Destructuring_Objects_and_Arrays.html
@@ -15,10 +15,11 @@
         <p class="practiceText">Go to the console for practice</p>
         <!-- <script src="./1_Destructuring_Objects_and_Arrays.js"></script> -->
         <!-- <script src="./2_Rest_Spread.js"></script> -->
-        <!-- <script src="./3_Template_Literals.js"></script> -->
+        <!-- <script src="./4_Template_Literals.js"></script> -->
         <!-- <script src="./7_short_circuiting.js"></script> -->
         <!-- <script src="./8_optional_chaining.js"></script> -->
         <!-- <script src="./9_map.js"></script> -->
-        <script src="./10_filter.js"></script>
+        <!-- <script src="./10_filter.js"></script> -->
+        <script src="./11_reduce.js"></script>
     </body>
 </html>
