sort method, mutable, immutable

--- a/Jonas_Schmedtmann/Essential_JavaScript_for_React/Destructuring_Objects_and_Arrays.html
+++ b/Jonas_Schmedtmann/Essential_JavaScript_for_React/Destructuring_Objects_and_Arrays.html
@@ -20,6 +20,7 @@
         <!-- <script src="./8_optional_chaining.js"></script> -->
         <!-- <script src="./9_map.js"></script> -->
         <!-- <script src="./10_filter.js"></script> -->
-        <script src="./11_reduce.js"></script>
+        <!-- <script src="./11_reduce.js"></script> -->
+        <script src="./12_sort_method.js"></script>
     </body>
 </html>
