for add: spread(copy of the main array), for delete: filter(reduce array size), for update: map(keep original array)

--- a/Jonas_Schmedtmann/Essential_JavaScript_for_React/Destructuring_Objects_and_Arrays.html
+++ b/Jonas_Schmedtmann/Essential_JavaScript_for_React/Destructuring_Objects_and_Arrays.html
@@ -21,6 +21,7 @@
         <!-- <script src="./9_map.js"></script> -->
         <!-- <script src="./10_filter.js"></script> -->
         <!-- <script src="./11_reduce.js"></script> -->
-        <script src="./12_sort_method.js"></script>
+        <!-- <script src="./12_sort_method.js"></script> -->
+        <script src="./13_Immutable_Arrays.js"></script>
     </body>
 </html>
